# fluxions

./: .editorconfig  .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  LICENSE  Makefile  README.md  TODO.md  fluxions.vcxproj  fluxions.vcxproj.filters  fluxions3.sln  fluxions3.vcxproj  packages.config  styles.css
dep/include/: ArHosekSkyModel.h  ArHosekSkyModelData_CIEXYZ.h  ArHosekSkyModelData_RGB.h  ArHosekSkyModelData_Spectral.h  imconfig.h  imgui.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
dep/src/: ArHosekSkyModel.cpp  glew.c  imgui.cpp  imgui_draw.cpp
doc/: ASCM.md  GLUT-extensions.md  GTE.md  Hatchetfish.md  KASL.md  Sunfish.md
doxygen/: Doxyfile
include/: ArHosekSkyModelData_CIEXYZ.h  ArHosekSkyModelData_RGB.h  damselfish.hpp  damselfish_base.hpp  damselfish_evaluator.hpp  damselfish_json.hpp  damselfish_lexer.hpp  damselfish_python.hpp  damselfish_syntax_semantic_analyzer.hpp  damselfish_variable_list.hpp  fluxions.hpp  fluxions_astronomy.hpp  fluxions_base.hpp  fluxions_bbox.hpp  fluxions_colors.hpp  fluxions_common_test.hpp  fluxions_config.hpp  fluxions_corona.hpp  fluxions_corona_job.hpp  fluxions_corona_scene.hpp  fluxions_corona_scene_file.hpp  fluxions_draw_gl1gl2.hpp  fluxions_es2_renderer.hpp  fluxions_es2_state_info.hpp  fluxions_file_path_info.hpp  fluxions_file_reader_writer.hpp  fluxions_file_system.hpp  fluxions_fileio.hpp  fluxions_fileio_iostream.hpp  fluxions_gl1gl2_tools.hpp  fluxions_gte.hpp  fluxions_gte_base.hpp  fluxions_gte_bounding_box.hpp  fluxions_gte_catmull_rom.hpp  fluxions_gte_color3.hpp  fluxions_gte_color4.hpp  fluxions_gte_color_math.hpp  fluxions_gte_common_vector.hpp  fluxions_gte_extra.hpp  fluxions_gte_geometric_algebra.hpp  (+167 more)
src/: ArHosekSkyModel.cpp  damselfish.cpp  damselfish_evaluator.cpp  damselfish_json.cpp  damselfish_lexer.cpp  damselfish_pch.cpp  damselfish_pch.hpp  damselfish_python.cpp  damselfish_variable_list.cpp  fluxions-gte.cpp  fluxions.cpp  fluxions_astronomy.cpp  fluxions_base.cpp  fluxions_bbox.cpp  fluxions_corona.cpp  fluxions_corona_job.cpp  fluxions_corona_scene.cpp  fluxions_corona_scene_file.cpp  fluxions_draw_gl1gl2.cpp  fluxions_es2_renderer.cpp  fluxions_file_path_info.cpp  fluxions_fileio.cpp  fluxions_fileio_iostream.cpp  fluxions_gl1gl2_tools.cpp  fluxions_gte.cpp  fluxions_gte_bounding_box.cpp  fluxions_gte_color3.cpp  fluxions_gte_color4.cpp  fluxions_gte_color_tests.cpp  fluxions_gte_geometric_algebra.cpp  fluxions_gte_image.cpp  fluxions_gte_image_operations.cpp  fluxions_gte_iostream.cpp  fluxions_gte_math.cpp  fluxions_gte_matrix2.cpp  fluxions_gte_matrix3.cpp  fluxions_gte_matrix4.cpp  fluxions_gte_matrix_extra.cpp  fluxions_gte_matrix_stack.cpp  fluxions_gte_pch.cpp  (+146 more)
